[gd_scene load_steps=2 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_0h8qx"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0h8qx")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
max_value = 100.0
value = 100.0

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 80.0
max_value = 100.0
value = 0.0
modulate = Color(0.2, 0.6, 1, 1)

[node name="ArmorLabel" type="Label" parent="ArmorBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
text = "âˆž"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
text = "0 - 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 90.0
text = "10:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="CrosshairDot" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(1, 1, 1, 1)

[node name="KillFeed" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0 